src/objects/inscor__Vendor_Contract_Price__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Vendor Contract Prices</relationshipLabel>
        <relationshipName>Vendor_Contract_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Vendor Contract Prices</relationshipLabel>
        <relationshipName>Vendor_Contract_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Effective__c</fullName>
        <formula>IF(  ISBLANK(inscor__Effective_Date__c)  ||  inscor__Effective_Date__c &lt;= TODAY() , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Expired__c</fullName>
        <formula>IF( NOT( ISBLANK(inscor__Expiration_Date__c) ) &amp;&amp; inscor__Expiration_Date__c &lt;  TODAY() , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Keyword__c</fullName>
        <formula>inscor__Product__r.inscor__Keyword__c</formula>
        <label>Keyword</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Lead_time__c</fullName>
        <label>Lead time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Min_Quantity__c</fullName>
        <label>Min Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vendor Contract Prices</relationshipLabel>
        <relationshipName>Vendor_Contract_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Contract Prices</relationshipLabel>
        <relationshipName>Vendor_Contract_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Contract Price</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Vendor__c</columns>
        <columns>inscor__Product__c</columns>
        <columns>inscor__Keyword__c</columns>
        <columns>inscor__Min_Quantity__c</columns>
        <columns>inscor__Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VCID-{0}</displayFormat>
        <label>Vendor Contract Price ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Contract Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Check_if_Round_Error</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( inscor__Min_Quantity__c ) &lt;&gt; inscor__Min_Quantity__c</errorConditionFormula>
        <errorDisplayField>inscor__Min_Quantity__c</errorDisplayField>
        <errorMessage>Please Enter Only Whole Numbers</errorMessage>
    </validationRules>
</CustomObject>